Big Beautiful Portugal Update

--- a/localisation/PB_Portugal_l_english.yml
+++ b/localisation/PB_Portugal_l_english.yml
@@ -11,6 +11,11 @@
   PB_POR_liberal_menace_desc:0 "Since the enlightenment touched upon Europe and the ideas of monarchy became old-fashioned, republicanist idealism has cursed Portugal. The growing social tension between the working class and the court has, however, not been as dangerous as some other European nations have experienced, as the Republican Party is divided to its core. We should still be carefull for revolution, as the militant enthusiasm of the republicanist are a threat to the monarchy and the catholic ideals Portugal is build upon."
   PB_POR_overstretched_empire:0 "Overstretched Empire"
   PB_POR_overstretched_empire_desc:0 "Since the loss of Brazil in the 1820s, Portugal has been an empire of nothing. The scramble of Africa, however, restored the national identity of Portugal as an exploring colonizing nation and many excited adventurers invested in the new African possessions of portugal. This new empire would last a thousand years! Reality, however, is often disappointing and the investments in Angola, Togo, Mozambique and Morocco never generated profit for Portugal. The military budget skyrocketed with these new territories and with the creation of the Suez canal, trade around the cape of Good Hope and the essential Portuguese profit from this would plummet. Today, Portugal is completely overextended with military posts across the world while its economy can not even support its military at home."
+  PB_POR_revolution:0 "The Portuguese Revolution"
+PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism and the once prosperous cities of Portugal now stand as urban battlefields, housing deadly snipers and revolutionaries among the buildings build to once house innocent civilians. This conflict will remain a Portuguese conflict till the day we win."
+ PB_POR_black_market_rampant:0 "Rampant Use of the Black Market"
+ PB_POR_stock_crisis:0 "Lisbon Stock Crash"
+ PB_POR_stock_crisis_desc:0 "The aftereffects of the British stock market disaster have reached the shores of Portugal and have grinded our already weak economy to a halt. Banks have closed their doors and many people now sit in the streets without a job, losing any faith in the government and the crown."
 
   ##########################
   # PARTIES
@@ -45,7 +50,35 @@
  portugal.1.d:0 "The tension between Republicanist and Monarchist forces have finally burst, as general Henrique Mitchell and the blue forces met with the protestors in Lisbon. The time of peace and negotiations had ended, as Mitchell told his army to open fire on the revolutionaries. At the end, 126 Portuguese republicans, consisting of women and children, died that day. The news spread like wildfire throughout Portugal and republican forces have set aside their differences, joining together in their revolution against the crown of the Braganza dynasty. News from Lisbon and Guarda have already confirmed that republican militants have taken control in the provinces, while the monarchist forces have ralied their banner in Galicia and their stronghold in Algarves. Manuel II has already expressed his shock, dissapointed in both the people of Portugal and his army for letting it get out of hand in such a short period of time."
  portugal.1.a:0 "The king is dead, Viva a República"
  portugal.1.b:0 "We will crush this rebellion"
- 
+ portugal.2.t:0 "Plundering of Churches"
+ portugal.2.d:0 "Considerable news has reached the republican capital, detailing the horrific deeds done by Republican militias against a small local church. The church itself was firstly plundered of its riches, with the soldiers eventually destroying it with fire, leaving nothing but burned bricks and wood where the church once proudly stood. The news of church disloyalty in republican territory is nothing new, but this act has sparked debate inside parliament, questioning if the republicans should alienate the conservative side of Portugal through burning their churches. The Jacobin extremists have been openly hostile towards the church and seem to agree that the church had it coming. The more liberal side of the party has been rather sceptic of this approach and the faction under Machado have expressed their concern for the future of Portugal if the militias would continue their conservative witchhunt."
+ portugal.2.a:0 "The Jacobin contingency clearly knows best"
+ portugal.2.b:0 "Church burning is not the Republican way"`
+ portugal.3.t:0 "Wartime Black Market"
+ portugal.3.d:0 "The black market often flourishes during difficult times, as people turn towards it when the normal market fails to deliver. However, the fact that the market is not regulated by the state means that dangerous substances often find their way to the population. Thus, the question has arisen if the government should allow the use of the black market by the militias, or if the government should step in and close it down forever, as to secure the future of the people and to keep them away from these dangerous drugs that flow through Portugal."
+ portugal.3.a:0 "A little opium never hurt anybody"
+ portugal.3.b:0 "Crack down upon this devilish market"
+ portugal.4.t:0 "White Terror"
+ portugal.4.d:0 "The considerable effort of the Republican army has finally seemed to break the monarchist spirit, as stories from Algarves and Galicia tell us the atrocities done by their soldiers. In their fear of republican sympathies, monarchist militias have started to execute suspected republicans in their territory, hanging them by the dozens. The story of 'the crucified syndicalist' also spread across republican territory, as integralists had supposedly crucified a republican supporter in their territory. If the stories are completely true does not matter in the slightest, as they have secured our position in the hearts of republicans across Portugal."
+ portugal.4.a:0 "We'll drive these butchers out of Portugal!"
+ portugal.5.t:0 "Red Terror"
+ portugal.5.d:0 "As the blue divisions are quickly making their way towards Lisbon and other strongholds of the republicans, stories have started to circle around the military high command, detailing the acts of extremists as a last desperate defense. The most popular story is the story of the unknown soldier: A soldier caught by the liberated youth division, who was interogated for 7 long hours. The soldier stood bravely against the republican bastards and eventually was executed for his trouble. Variants of the story also detail the republicans scalping the soldier and using his organs as a foodsource, due to the low rationing of the republican militias, though these stories are not believed by many soldiers."
+ portugal.5.a:0 "That will definetely validify our coming actions..."
+ portugal.6.t:0 "Lisbon Trials"
+ portugal.6.d:0 "The recent fall of the Republican stronghold of Lisbon has been the starting sign for the Lisbon trials, a serie of trials deciding the faith of several suspected republican leaders, mostly of the extreme jacobin branch of the party. The trails, set up by the military high command, have attracted a lot of people and many yearn for these criminals to face justice for their indescribable crimes against humanity. While evidence is lacking, many do not care and the court seems to heavily favour to see these criminals hanging."
+ portugal.6.a:0 "They deserve imprisonment"
+ portugal.6.b:0 "Death awaits these criminals"
+ portugal.7.t:0 "Benefit from Civil War?"
+ portugal.7.d:0 "The Portuguese civil war seems close to lost for the monarchists, as their troops organize for a last desperate offensive. However, while their effort was applaudable, their future lost does open up the question of the Azores, a group of important Atlantic islands that has been used by the British navy several times in recent history. A republican victory in Portugal could mean the end of British access to the Azores and could even lead to the Azores becoming a future naval base for the French, which we cannot afford. Thus, the British Royal Navy and Airforce have proposed a quick occupation of the islands. Revenge for such an action would be impossible for the Portuguese, as they are still busy with their civil war. However, many do seem to fear such occupation could hurt British-Portuguese ties, driving them into the arms of France and Spain."
+ portugal.7.a:0 "Seize those islands!"
+ portugal.7.b:0 "We can't lose the Portuguese as allies!"
+ portugal.8.t:0 "The Crash hits Portugal"
+ portugal.8.d:0 "Recent news from Britain had shocked the world, as their economy collapsed faster than a paper house, leaving behind the fallout of this crash around the world. Portugal, being the closest British ally politically and economically, is definetely affected by this economic crash and many the Lisbon stockmarket has confirmed the worst fear of our ministry: the weak, unproductive and primitive economy of Portugal is completely shattered with nothing left to repair it with. The general populace has already taken it to the streets demonstrating the new working conditions and prices, but the government can do little to help these people."
+ portugal.8.a:0 "May Maria have mercy on our stocks..."
+ portugal.9.t:0 "Hyperinflation runs rampant"
+ portugal.9.d:0 "The recent economic crash of Portugal forced our current economic minister, José Vincente, to rework our domestic finance policies, as to protect our economy from any further hits. One of his policies regard the quick debt collection of the other imperial powers, who have given loans to Portugal and now, as their economies also are affected by the crash, want their money with high interest back. His policy of printing money to repay those debts, however, created a bigger problem: Hyperinflation. The printing of money made the Portuguese real worthless and has kicked Portugal even further down the drain financially."
+ portugal.9.a:0 "Good grief..."
+
   ##########################
   # FOCUSSES
   ##########################
@@ -81,6 +114,43 @@
  POR_pride_of_portugal:0 "Pride of Portugal"
  POR_more_power_for_economic_minister:0 "The Financial Dictate"
  POR_expand_naval_dockyards:0 "Return to Naval Glory"
+ POR_civil_war_recovery:0 "Post-Civil War Recovery"
+ POR_urban_recovery:0 "Eyes to the Cities"
+ POR_construct_new_schools:0 "Construct new Schools"
+ POR_construct_new_housing:0 "Construct new Houses"
+ POR_support_the_homeless:0 "Support for the Unfortunate"
+ POR_reuse_bricks:0 "Reuse Every Brick"
+ POR_demobilize_the_militias:0 "Demobilize our Militias"
+ POR_proper_catholic_education:0 "Catholic Education for the City"
+ POR_affordable_bread:0 "End High Bread Prices"
+ POR_rural_recovery:0 "Eyes to the Farms"
+ POR_fix_shitty_infrastructure:0 "Repair the Stone Roads"
+ POR_destroy_dirt_roads:0 "Destroy the Dirt Roads"
+ POR_distribute_food:0 "Distribute Aid"
+ POR_reconstruct_churches:0 "Reconstruct Burned Churches"
+ POR_forced_young_jacobin_labour:0 "Forced Jacobin Labour Act"
+ POR_catholic_upbringing_for_lost_youth:0 "The Lost Youth"
+ POR_legacy_of_the_jacobins:0 "Legacy of the Reds"
+ POR_only_catholic_unions:0 "Ban Socialist Unions"
+ POR_military_police_service:0 "Military Police Act"
+ POR_hearts_and_minds:0 "Hearts and Minds"
+ POR_reconcile_with_the_families:0 "The Unfortunate Families"
+ POR_story_of_the_yellow_smoke:0 "Danger of Mustard Gas"
+ POR_ban_the_use_of_chemical_warfare:0 "Distance ourselves from Chemical Warfare"
+ POR_special_monument_for_fallen:0 "The Lisbon Monument"
+ POR_special_day_of_the_dead:0 "Day of the Fallen Soldiers"
+ POR_economic_reconciliation_for_the_families:0 "Economic Support for the Families"
+ POR_laying_it_to_rest:0 "Letting Dead Soldiers Rest"
+ POR_stab_in_the_back_myth:0 "The Jacobin Treason Myth"`
+ POR_blame_socialists:0 "Blame the Republican Party"
+ POR_arrest_opposition:0 "Arrest the Jacobin Branch"
+ POR_blame_spain:0 "Blame the Spanish State"
+ POR_support_from_the_military_industry:0 "Support from the Industry"
+ POR_avenge_the_fallen:0 "Avenge the Fallen"
+ POR_denounce_chemical_warfare:0 "Denounce Chemicals"
+ POR_ironic_twist_of_fate:0 "Nothing but a Gesture..."
+ POR_revenge_for_their_sins:0 "Revenge for our Loss"
+ POR_holy_see_support:0 "Support from Rome"
 
 
   ##########################
