Various Work and Dissent Events

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1325,22 +1325,22 @@
  GAN_cn_ADJ:0 "Chinese"
  GAN_an_ADJ:0 "Chinese"
 
- QGH_ni:0 "Qinghai Clique"
- QGH_ni_DEF:0 "Qinghai Clique"
- QGH_ds:0 "Qinghai Clique"
- QGH_ds_DEF:0 "Qinghai Clique"
- QGH_rc:0 "Qinghai Clique"
- QGH_rc_DEF:0 "Qinghai Clique"
- QGH_an:0 "Qinghai Clique"
- QGH_an_DEF:0 "Qinghai Clique"
- QGH_cn:0 "Qinghai Clique"
- QGH_cn_DEF:0 "Qinghai Clique"
- QGH_lb:0 "Qinghai Clique"
- QGH_lb_DEF:0 "Qinghai Clique"
- QGH_ss:0 "Qinghai Clique"
- QGH_ss_DEF:0 "Qinghai Clique"
- QGH_jc:0 "Qinghai Clique"
- QGH_jc_DEF:0 "Qinghai Clique"
+ QGH_ni:0 "Indendent State of Hui"
+ QGH_ni_DEF:0 "Indendent State of Hui"
+ QGH_ds:0 "Indendent State of Hui"
+ QGH_ds_DEF:0 "Indendent State of Hui"
+ QGH_rc:0 "Indendent State of Hui"
+ QGH_rc_DEF:0 "Indendent State of Hui"
+ QGH_an:0 "Indendent State of Hui"
+ QGH_an_DEF:0 "Indendent State of Hui"
+ QGH_cn:0 "Indendent State of Hui"
+ QGH_cn_DEF:0 "Indendent State of Hui"
+ QGH_lb:0 "Indendent State of Hui"
+ QGH_lb_DEF:0 "Indendent State of Hui"
+ QGH_ss:0 "Indendent State of Hui"
+ QGH_ss_DEF:0 "Indendent State of Hui"
+ QGH_jc:0 "Indendent State of Hui"
+ QGH_jc_DEF:0 "Indendent State of Hui"
  QGH_ni_ADJ:0 "Hui"
  QGH_rc_ADJ:0 "Hui"
  QGH_lb_ADJ:0 "Hui"
@@ -1525,22 +1525,22 @@
  SIA_cn_ADJ:0 "Thai"
  SIA_an_ADJ:0 "Thai"
 
- MAN_ni:0 "Empire of Great Manchu"
- MAN_ni_DEF:0 "Empire of Great Manchu"
- MAN_ds:0 "Empire of Great Manchu"
- MAN_ds_DEF:0 "Empire of Great Manchu"
- MAN_rc:0 "Empire of Great Manchu"
- MAN_rc_DEF:0 "Empire of Great Manchu"
- MAN_an:0 "Empire of Great Manchu"
- MAN_an_DEF:0 "Empire of Great Manchu"
- MAN_cn:0 "Empire of Great Manchu"
- MAN_cn_DEF:0 "Empire of Great Manchu"
- MAN_lb:0 "Empire of Great Manchu"
- MAN_lb_DEF:0 "Empire of Great Manchu"
- MAN_ss:0 "Empire of Great Manchu"
- MAN_ss_DEF:0 "Empire of Great Manchu"
- MAN_jc:0 "Empire of Great Manchu"
- MAN_jc_DEF:0 "Empire of Great Manchu"
+ MAN_ni:0 "Manchuria"
+ MAN_ni_DEF:0 "Manchuria"
+ MAN_ds:0 "Manchuria"
+ MAN_ds_DEF:0 "Manchuria"
+ MAN_rc:0 "Manchuria"
+ MAN_rc_DEF:0 "Manchuria"
+ MAN_an:0 "Manchuria"
+ MAN_an_DEF:0 "Manchuria"
+ MAN_cn:0 "Manchuria"
+ MAN_cn_DEF:0 "Manchuria"
+ MAN_lb:0 "Manchuria"
+ MAN_lb_DEF:0 "Manchuria"
+ MAN_ss:0 "Manchuria"
+ MAN_ss_DEF:0 "Manchuria"
+ MAN_jc:0 "Manchuria"
+ MAN_jc_DEF:0 "Manchuria"
  MAN_ni_ADJ:0 "Manchurian"
  MAN_rc_ADJ:0 "Manchurian"
  MAN_lb_ADJ:0 "Manchurian"
@@ -3150,6 +3150,81 @@
  FST_cn_ADJ:0 "Australo-French"
  FST_an_ADJ:0 "Australo-French"
 
+ RCH_ni:0 "Revolutionary State of China"
+ RCH_ni_DEF:0 "Revolutionary State of China"
+ RCH_ds:0 "Revolutionary State of China"
+ RCH_ds_DEF:0 "Revolutionary State of China"
+ RCH_rc:0 "Revolutionary State of China"
+ RCH_rc_DEF:0 "The Revolutionary State of China"
+ RCH_an:0 "Revolutionary State of China "
+ RCH_an_DEF:0 "Revolutionary State of China"
+ RCH_cn:0 "Revolutionary State of China"
+ RCH_cn_DEF:0 "Revolutionary State of China"
+ RCH_lb:0 "Revolutionary State of China"
+ RCH_lb_DEF:0 "The Revolutionary State of China"
+ RCH_ss:0 "Revolutionary State of China"
+ RCH_ss_DEF:0 "The Revolutionary State of China"
+ RCH_jc:0 "Revolutionary State of China"
+ RCH_jc_DEF:0 "Revolutionary State of China"
+ RCH_ni_ADJ:0 "Chinese"
+ RCH_rc_ADJ:0 "Chinese"
+ RCH_lb_ADJ:0 "Chinese"
+ RCH_ss_ADJ:0 "Chinese"
+ RCH_jc_ADJ:0 "Chinese"
+ RCH_ds_ADJ:0 "Chinese"
+ RCH_cn_ADJ:0 "Chinese"
+ RCH_an_ADJ:0 "Chinese"
+
+ BOX_ni:0 "Yihetuan Uprising"
+ BOX_ni_DEF:0 "Yihetuan Uprising"
+ BOX_ds:0 "Yihetuan Uprising"
+ BOX_ds_DEF:0 "Yihetuan Uprising"
+ BOX_rc:0 "Yihetuan Uprising"
+ BOX_rc_DEF:0 "The Yihetuan Uprising"
+ BOX_an:0 "Yihetuan Uprising "
+ BOX_an_DEF:0 "Yihetuan Uprising"
+ BOX_cn:0 "Yihetuan Uprising"
+ BOX_cn_DEF:0 "Yihetuan Uprising"
+ BOX_lb:0 "Yihetuan Uprising"
+ BOX_lb_DEF:0 "The Yihetuan Uprising"
+ BOX_ss:0 "Yihetuan Uprising"
+ BOX_ss_DEF:0 "The Yihetuan Uprising"
+ BOX_jc:0 "Yihetuan Uprising"
+ BOX_jc_DEF:0 "Yihetuan Uprising"
+ BOX_ni_ADJ:0 "Chinese"
+ BOX_rc_ADJ:0 "Chinese"
+ BOX_lb_ADJ:0 "Chinese"
+ BOX_ss_ADJ:0 "Chinese"
+ BOX_jc_ADJ:0 "Chinese"
+ BOX_ds_ADJ:0 "Chinese"
+ BOX_cn_ADJ:0 "Chinese"
+ BOX_an_ADJ:0 "Chinese"
+
+ NPF_ni:0 "National Protection Front"
+ NPF_ni_DEF:0 "National Protection Front"
+ NPF_ds:0 "National Protection Front"
+ NPF_ds_DEF:0 "National Protection Front"
+ NPF_rc:0 "National Protection Front"
+ NPF_rc_DEF:0 "The National Protection Front"
+ NPF_an:0 "National Protection Front "
+ NPF_an_DEF:0 "National Protection Front"
+ NPF_cn:0 "National Protection Front"
+ NPF_cn_DEF:0 "National Protection Front"
+ NPF_lb:0 "National Protection Front"
+ NPF_lb_DEF:0 "The National Protection Front"
+ NPF_ss:0 "National Protection Front"
+ NPF_ss_DEF:0 "The National Protection Front"
+ NPF_jc:0 "National Protection Front"
+ NPF_jc_DEF:0 "National Protection Front"
+ NPF_ni_ADJ:0 "Chinese"
+ NPF_rc_ADJ:0 "Chinese"
+ NPF_lb_ADJ:0 "Chinese"
+ NPF_ss_ADJ:0 "Chinese"
+ NPF_jc_ADJ:0 "Chinese"
+ NPF_ds_ADJ:0 "Chinese"
+ NPF_cn_ADJ:0 "Chinese"
+ NPF_an_ADJ:0 "Chinese"
+ 
 ###################################
 # TEMPLATE
 ###################################
