Lot of Portuguese, Italian and Spanish updates

--- a/localisation/PB_Portugal_l_english.yml
+++ b/localisation/PB_Portugal_l_english.yml
@@ -17,11 +17,15 @@ PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism a
  PB_POR_stock_crisis:0 "Lisbon Stock Crash"
  PB_POR_stock_crisis_desc:0 "The aftereffects of the British stock market disaster have reached the shores of Portugal and have grinded our already weak economy to a halt. Banks have closed their doors and many people now sit in the streets without a job, losing any faith in the government and the crown."
 
+POR_PB_franco_HOG:0 "João Franco"
+POR_PB_jose_EM:0 "José Vicente de Freitas"
+POR_PB_henrique_EM:0 "Henrique Mitchell de Paiva Couceiro"
+POR_PB_salazar_EM:0 "António de Oliveira Salazar"
   ##########################
   # PARTIES
   ##########################
-  POR_ni_party_long:0 "Nova Pátria"
-  POR_ni_party:0 "NP"
+  POR_ni_party_long:0 "Movimento Nacional-Syndicalista"
+  POR_ni_party:0 "MNS"
   POR_ds_party_long:0 "Dinastia Brigantina"
   POR_ds_party:0 "Brigantina"
   POR_rc_party_long:0 "Movimento Nacional-Syndicalista"
@@ -78,7 +82,57 @@ PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism a
  portugal.9.t:0 "Hyperinflation runs rampant"
  portugal.9.d:0 "The recent economic crash of Portugal forced our current economic minister, José Vincente, to rework our domestic finance policies, as to protect our economy from any further hits. One of his policies regard the quick debt collection of the other imperial powers, who have given loans to Portugal and now, as their economies also are affected by the crash, want their money with high interest back. His policy of printing money to repay those debts, however, created a bigger problem: Hyperinflation. The printing of money made the Portuguese real worthless and has kicked Portugal even further down the drain financially."
  portugal.9.a:0 "Good grief..."
-
+ portugal.10.t:0 "Day of the Revolution"
+ portugal.10.d:0 "As Manuel II awoken from his slumber, a worried servant walked into the room of his majesty. Annoyed by this display of insolence, Manuel II talked down upon his loyal servant. The man waited untill Manuel was done and gave him the news. As Manuel II read the news, he slowly turned sad, than worried and than ballistic. How dare they seize this moment to start their revolution. Are we not already in a revolution! He screamed. \n\nThe news of Preto's revolution spread across the entirety of Portugal: The news of his revolutionary undertaking was met with scepticism inside the new Portuguese republic, though many were somewhat relieved, as the possibility of peace came closer. The news of the revolution inside monarchist territory was a rather mixed bag of emotions. Many inside the court and supportive of the monarchy were disgusted by this display of disloyalty, but Peto's anti-jacobin stance did succeed among many old conservatives and his idealistic view upon the future has also led to national syndicalist support among the Portuguese youth. The Blueshirts, with popular support, have already captured most government buildings and there's a real possiblity that Manuel II is in jeopardy."
+ portugal.10.a:0 "The Revolution has begun..."
+ portugal.11.t:0 "Manuel II flees"
+ portugal.11.d:0 "Fearing the new revolution inside monarchist territory, Manuel II has hopped on a battleship going towards the Portuguese colony of Angola. The national syndicalist revolution, due to its unorganized high command consisting of both national syndicalists and highly anti-monarchist elements like anarchists, had not made clear if it supports the monarchy and, with his life in serious jeopardy, Manuel II made the choice of leaving his nation behind."
+ portugal.11.a:0 "What a shame..."
+ portugal.12.t:0 "Manuel II stays"
+ portugal.12.d:0 "While his life may have been in jeopardy, Manuel II was determined in staying inside his Portuguese palace. The national syndicalists have now made clear contact with his majesty and have made it rather clear that the high command never had any intentions of deposing him. This guarantee has seemingly calmed the situation between monarchists and national syndicalists and Manuel II's reign will continue to grant legitimacy to the new government."
+ portugal.12.a:0 "Thanks, Manuel"
+ portugal.13.t:0 "The Question of a Succesor"
+ portugal.13.d:0 "As Manuel II has fled the nation and had no son to become king after his reign, the national syndicalists have met with the monarchists integralists, debating about the future of the monarchy. While willing to suppport a monarchy, several members of the national syndicalists have proposed the establishment of a totalitarian state, ruled by an absolute prime minister. While this idea has sparked some interest, the integralist faction have accused these ideas as jacobin and seem to only belief in an effective monarchy under their proposed leader, Duarte Nuno, duke of Braganza."
+ portugal.13.a:0 "Get Duarte here!"
+ portugal.13.b:0 "A Totalitarian Regime is more fitting of our situation"
+ portugal.14.t:0 "Portugal wants to join"
+ portugal.14.d:0 "Our loyal friends in Lisbon have recently send a request to London regarding our alliance, the commonwealth of nations. The Portuguese seemingly seek to further cooperation between Portugal and the British Empire and have requested to join the Commonwealth of Nations, as to protect Portuguese interests in Africa, Asia, South America and Europe. Their request has mostly been approved, but some voices do regard Portugal more as a thorn in the British side, then an actual ally."
+ portugal.14.a:0 "We need loyal allies"
+ portugal.14.b:0 "We can do without the Portuguese"
+ portugal.15.t:0 "The Commonwealth Welcomes us"
+ portugal.15.d:0 "In a fitting display of true loyalty and friendship between nations, Britain has agreed upon our request of joining the commonwealth of nations. This global development will surely have an effect upon the revanchist power of France."
+ portugal.15.a:0 "Portugal fights with Britain"
+ portugal.16.t:0 "The Commonwealth Rejects us"
+ portugal.16.d:0 "Our nation is outraged at the recent display of treason from the United Kingdom, as our friendly request of joining their alliance of independent, western states was rejected. History will show us that their mistake will benefit us eventually."
+ portugal.16.a:0 "We never liked them anyway..."
+ portugal.17.t:0 "Portugal seeks to join our Pact"
+ portugal.17.d:0 "An envoy from the serene Atlantic nation of Portugal has brought rather favorable nations to Paris. The Portuguese, tired of Anglo hegemony, have come to us and our alliance, hoping to join us in our coming war against Anglo-Saxon dominance. Their request, while somewhat naive, could help us in the coming storm. Should we accept them?"
+ portugal.17.a:0 "Oui"
+ portugal.17.b:0 "The Portuguese are still too Anglo-friendly for our liking"
+ portugal.18.t:0 "The Revanchiste Pacte Welcomes us"
+ portugal.18.d:0 "Words from Paris have confirmed the dreams of many among the Portuguese imperialist court: France has accepted us in their little alliance against Britain and Germany. We will make an amazing asset in the coming conflict, or will make a great point of pressure in French ambitions regarding Europe, Asia and Africa."
+ portugal.18.a:0 "We will rise together!"
+ portugal.19.t:0 "The Revanchiste Pacte Rejects us"
+ portugal.19.d:0 "News from Paris has caused major disturbance among many government officials, as our small request of joining the rising power of France in their revanchist alliance was rejected. While we now have to find another alliance for our interests, we can safely say that their rejection could easily spell their doom."
+ portugal.19.a:0 "They will fall alone, right?"
+ portugal.20.t:0 "Protest against Freitas"
+ portugal.20.d:0 "The failure of our current minister of the treasury, José Freitas, has clearly angered the people, as a protest in Lisbon began to demand his resignation. This anti-Freitas sentiment was shared by many inside the court, including Manuel, and Freitas was forced to resign shortly after the protests, pressured by the king and the head of government. \n\nWith Freitas gone, two known men have offered to take Freitas' old position. The first man is António Salazar. Salazar, while coming from a poor family, studied law at Coimbra and is very popular among the poorer classes of Portugal for his economic moral. as a staunch proponent of balancing the budget and austerity, Salazar has some rather clever economic ideas. \n\nThe second man is Henrique Mitchell de Paiva Couceiro. Mitchell is a staunch monarchist and the current colonial governor of the pink map region. Having studied at the military academy of Lisbon, Henrique is rather nationalist in his economic policies, regarding the Portuguese industry as a child that needs to grow. His policies are rather popular among the old court and nobles of Portugal."
+ portugal.20.a:0 "Henrique is the right guy!"
+ portugal.20.b:0 "Salazar has a great mindset!"
+ portugal.21.t:0 "February Attack"
+ portugal.21.d:0 "The newspapers of Portugal are scrambling today to cover the latest news, as our majesty, Manuel II of Braganza, nearly died in a republican attack. \n\nThis morning, Manuel II attended the opening of a new street in Lisbon named in honor of his father. However, the opening quickly turned into a bloodbath, when members of the Liberated Youth attacked Manuel's bodygaurd with a small German pistol. The oldest member of the attack was just about to attack Manuel II when his gun jammed, safing Manuel II from a gruesome death at the hands of the Republican radicals. The attackers were arrested after the attack and Manuel II has escaped the attack with only light emotional damage. However, the republicans have made it rather clear that Manuel II is in grave danger when walking his own streets."
+ portugal.21.a:0 "Atleast the king survived"
+ portugal.22.t:0 "Preto Speeches in Army Camp"
+ portugal.22.d:0 "Small rumours from a northern army camp has confirmed the suspicion of Manuel that Preto, head of the national syndicalist movement, had been around the frontlines recently. The same rumours also tell us about a supposedly amazing speech given by this Preto. Soldiers described his orating skills as marvelous and almost royal. \n\n§RIt seems increasingly clear that Preto can become an opponent of the state§!"
+ portugal.22.a:0 "Who let that buffoon talk?"
+ portugal.23.t:0 "National Syndicalists in the Blue Front?"
+ portugal.23.d:0 "While our tactical alliance with the national syndicalists in the blue front has beared its fruits, the dangerous party is still nothing more than a junior member of the front, not being allowed in the most secret of meetings with his majesty. Their leader, Francisco Preto, has brought up this difference in partnership today and, with support of the other junior partners like the catholic extremists and integralists, has asked the king to allow the junior partners to become full members of the Blue Front. Their demands had clearly spooked the rest of the blue front members, as both the delegates of the conservative party as the military office looked in fear towards the kings delegate."
+ portugal.23.a:0 "Why not?"
+ portugal.23.b:0 "We'd rather not..."
+ portugal.24.t:0 "Blueshirt Division"
+ portugal.24.d:0 "After being allowed into the more secret meetings with the king, Preto has been rather busy in proposing changes in the tactics of the blue front. His most recent proposal involve Preto's very own blueshirts, the National Syndicalist paramilitary. He has promised unlimited blueshirt support in the war effort, in exchange for political priviliges, such as allowing the §RRevolução§! to print freely and not be restricted by royal censorship. Such priviliges seem rather acceptable, but the army does fear that Preto's proposal is just a piece of his plot in overthrowing the current government."
+ portugal.24.a:0 "We do need more able bodies..."
+ portugal.24.b:0 "A bunch of bullshit, if you ask me."
   ##########################
   # FOCUSSES
   ##########################
@@ -93,7 +147,7 @@ PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism a
  POR_seek_foreign_loans:0 "Take out a Loan"
  POR_enforce_austerity:0 "Enforce Austerity Measures"
  POR_improve_portuguese_infrastructure:0 "Railways, Por Favor"
- POR_let_franco_steer_the_nation:0 "Franco Holds the Steering Wheel "
+ POR_let_franco_steer_the_nation:0 "Henrique Holds the Steering Wheel "
  POR_expansive_industrial_plan:0 "Industrialization Planning"
  POR_support_traditional_farmers:0 "Subsidize Farming Ventures"
  POR_joint_economic_recovery_plan:0 "Joint Economic Recovery"
@@ -141,7 +195,7 @@ PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism a
  POR_special_day_of_the_dead:0 "Day of the Fallen Soldiers"
  POR_economic_reconciliation_for_the_families:0 "Economic Support for the Families"
  POR_laying_it_to_rest:0 "Letting Dead Soldiers Rest"
- POR_stab_in_the_back_myth:0 "The Jacobin Treason Myth"`
+ POR_stab_in_the_back_myth:0 "The Jacobin Treason Myth"
  POR_blame_socialists:0 "Blame the Republican Party"
  POR_arrest_opposition:0 "Arrest the Jacobin Branch"
  POR_blame_spain:0 "Blame the Spanish State"
@@ -151,8 +205,38 @@ PB_POR_revolution_desc:0 "Portugal is lit ablaze by the fires of republicanism a
  POR_ironic_twist_of_fate:0 "Nothing but a Gesture..."
  POR_revenge_for_their_sins:0 "Revenge for our Loss"
  POR_holy_see_support:0 "Support from Rome"
-
-
+ POR_go_into_the_world:0 "Join a Great Power"
+ POR_non_binding_policy:0 "The Lonely Portuguese Path"
+ POR_european_policy:0 "Continental Policy"
+ POR_south_american_policy:0 "South American Policy"
+ POR_african_policy:0 "African Policy"
+ POR_soften_spanish_relations:0 "The Spanish Friend"
+ POR_demilitarize_the_border:0 "Demilitarize our Borders"
+ POR_pact_of_friendship_spain:0 "Pacto de Amizade Eterna"
+ POR_pact_of_friendship_spain_desc:0 "Our efforts to improve Spanish-Portuguese relations have finally gifted us the fruits of our work. Widespread appeal exists for a pact of friendship between our two nations, promising peace between the two states till the end of time itself. This pact still is in a rather infant stage, but we can certainly try to push for such relationship with Spain."
+ POR_spanish_enemy:0 "The Spanish Devil"
+ POR_arm_catalonia:0 "Arm the Catalan Effort"
+ POR_integrate_galicia_properly:0 "Integrate Galicia"
+ POR_invade_spain:0 "Operation Condestável"
+ POR_invade_spain_desc:0 "Operation Condestável (named after Nuno Álvares/Saint Condestável, who fought during the Castilian intervention of the Portuguese civil war and secured several victories in the name of Portugal during the conflict) is the name given to supposed plans to invade Spain proposed by members of the high command in a hypothetical Spanish near-defeat."
+ POR_the_broken_pearl_of_portugal:0 "Our Lost Pearl"
+ POR_cisplatina_war:0 "Invade Cisplatina"
+ POR_campaign_through_the_amazonas:0 "Subjugate the Confederation"
+ POR_central_brazilian_expedition:0 "End the Psuedo-Empire"
+ POR_restore_south_american_hegemony:0 "Restore South American Hegemony"
+ POR_expand_the_colonial_armada:0 "Expand the Colonial Navy"
+ POR_ports_in_brazil:0 "Ports of Brazil"
+ POR_african_hegemon:0 "Our Grip on Africa"
+ POR_expand_african_infrastructure:0 "Expand Somalian Infrastructure"
+ POR_provoke_ethiopia:0 "Provoke Abyssinia"
+ POR_coffee_farming_in_ethiopia:0 "Plant Coffee Crops in Addis Ababa"
+ POR_buy_eritrea:0 "Eritrea Ambitions"
+ POR_portuguese_settlers:0 "Subsidize Portuguese Settlements"
+ POR_claim_dutch_pretoria:0 "Cape Ambitions"
+ POR_plan_a_congo_crisis:0 "Plan a Congo Crisis"
+ POR_seek_french_support:0 "Seek French Support"
+ POR_seek_native_support:0 "Seek Native Support"
+ POR_congo_crisis:0 "Crisis in the Congo"
   ##########################
   # RANDOM STUFF
   ##########################
@@ -181,3 +265,28 @@ PRT_ni:0 "Greater Portugal"
  PRT_ds_ADJ:0 "Portuguese"
  PRT_cn_ADJ:0 "Portuguese"
  PRT_an_ADJ:0 "Portuguese"
+
+ ###############################
+ # - Decisions
+ ###############################
+
+ PB_POR_civil_war_mechanic:0 "Portuguese Civil War"
+PB_POR_civil_war_mechanic_desc:0 "Jacobin and Liberal treachery has finally reached a point of no return. King Manuel II and his court have to quickly find a way to manage this rebellion against the crown if they want to secure the future of Portugal and its colonies. Blue militias have already made their way to fight for Manuel II and much of the Portuguese clergy have already blessed our majesty in this conflict. \n\n §YCurrent Support for MNS: [ni.GetPartySupport]§!"
+PB_POR_unite_portugal:0 "Blue Front Unification"
+PB_POR_unite_portugal_desc:0 "The Blue Front is the term used to describe the anti-republican forces fighting in the Portuguese civil war. While this term describes an united force, this force is far from united in reality: National syndicalists, integralists, military officers, loyalists to the crown and conservatists all fight a common enemy, but without a common goal."
+PB_POR_loss_of_the_civil_war:0 "National Syndicalist Plot"
+PB_POR_loss_of_the_civil_war_desc:0 "While we may work with the national syndicalist elements in our blue front, they're not to be considered friends of the regime. While having a base of moderate monarchists, they do not belief in the future of the monarchy. If this civil conflict would last too long, they could easily amass popular support from both the far right and far left in overthrowing the monarchist government. We either have to force these elements out of our government or we should try to win this conflict as quickly as possible."
+PB_POR_alliance:0 "Picking an Alliance"
+PB_POR_pick_ENG:0 "Pick the Commonwealth of Nations"
+POR_PB_picked:0 "Picked an Alliance"
+PB_POR_pick_FRA:0 "Pick the Revanchist Pacte"
+POR_my_decision:0 "Opens Decision: §YPicking an Alliance§!"
+
+#Random
+
+PB_POR_HENRIQUE:0 "§YAppointed Henrique as economic minister§!"
+PB_POR_SALAZAR:0 "§YAppointed Salazar as economic minister§!"
+POR_economic_crash_flag:0 "§YEconomic Crisis hit Portugal§!"
+POR_civil_war_end_MON:0 "§YThe Civil War has ended§!"
+POR_military_junta:0 "§YThe Military Junta has taken power§!"
+POR_nat_synd_popularity:0 "Preto's Influence"
