--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -15,8 +15,8 @@ PB_SPR_treaty_1_desc:0 "The Treaty of A Coruña is for many Spanish nationalists
   ##########################
 SPR_ni_party_long:0 "Falange Española"
 SPR_ni_party:0 "FE"
-SPR_ds_party_long:0 "Renovación Española"
-SPR_ds_party:0 "RE"
+SPR_ds_party_long:0 "Junta Militar"
+SPR_ds_party:0 "Junta Militar"
 SPR_rc_party_long:0 "Comunión Tradicionalista"
 SPR_rc_party:0 "CT"
 SPR_cn_party_long:0 "Confederación Española de Derechas Autónomas"
@@ -45,6 +45,13 @@ SPR_jc_party:0 "FP"
 
 
   ##########################
+  # EVENTS
+  ##########################
+spain.1.t:0 "The Mary Coup Chaos"
+spain.1.d:0 "Not too long ago, Emilio Mola with support of the army and the right-wing of Spain, has been able to stage a violent coup against the anti-catholic republican government. The republican government was founded in 1911, one year before the official signing of the treaty of A Coruña, founded on the ruins of Madrid after the brutal civil war between Alfonso loyalists and republican forces. However, the years after the treaty were quite unstable with rebellion after rebellion. While stability has always been rare for Spain, the Republicans never bothered to fix the instability and created enemies on all fronts. The 1931 elections would prove to be the last straw, as democratic traditions grinded to a halt with the opposition and coalition not being able to work with the rising Falange party. On the 29th of October, 1932, after a proposal to ban the Falangist party, the party members ran out of parliament, forcing snap elections upon Spain. Those snap elections would never come. With support of the army and the CEDA party, the Falange was able to coup the republican government on the 18th of December. The death of Sanjurjo on the 30th of December forced Emilio Mola to become the next head of state. However, republican forces, while broken, are not defeaten and are organizing themselves on the borders of the Spanish state. Can Mola crush this government and start a new age for Spain?"
+spain.1.a:0 "Probally not..."
+
+  ##########################
   # Decisions
   ##########################
 PB_SPR_dissident_mechanics:0 "Spanish Dissident Mechanic"
@@ -55,7 +62,7 @@ PB_SPR_angry_catalans:0 "Catalan Rebels"
 PB_SPR_lower_dissent:0 "Calm the Public"
 PB_SPR_lower_dissent_desc:0 "As to ensure public safety and national cohesion, government officials have begun a campaign to increase trust in the government and stability across our regions."
 PB_SPR_angry_catalans_desc:0 "The Catalan populace has been a general threat towards Spanish stability ever since the ideals of nationalism crossed the pyrenees into Iberia. Catalan nationalists have been extremely hostile towards our regime and we can expect things to turn violent if unanswered."
-
+Republican_Stronghold:0 "Republican Stronghold"
   ##########################
   # Country Name
   ##########################
